@@ -1,27 +1,31 @@
 package Worker;
 
+import java.awt.image.BufferedImage;
+import java.io.File;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.Writer;
+import java.net.URI;
+
+import javax.imageio.ImageIO;
+
 import org.apache.pdfbox.pdmodel.PDDocument;
 import org.apache.pdfbox.rendering.PDFRenderer;
 import org.apache.pdfbox.text.PDFTextStripper;
 
-import javax.imageio.ImageIO;
-import java.awt.image.BufferedImage;
-import java.io.*;
-import java.net.URL;
-
 public class PDFConverter {
 
 
-    public static PDDocument loadPDF(String pdfUrl) {
-        try (InputStream in = new URL(pdfUrl).openStream()) {
+    public static PDDocument loadPDF(String pdfUrl) throws Exception {
+        try (InputStream in = URI.create(pdfUrl).toURL().openStream()) {
             return PDDocument.load(in);
         } catch (IOException e) {
-            System.err.println("Failed to load PDF from URL: " + e.getMessage());
-            return null;
+            throw new Exception("Failed to load PDF from URL: " + e.getMessage());
         }
     }
 
-    public static void ToImage(PDDocument document, String outputPath) {
+    public static void ToImage(PDDocument document, String outputPath) throws Exception {
         try {
             PDFRenderer renderer = new PDFRenderer(document);
             BufferedImage image = renderer.renderImage(0); // Render the first page (index 0)
@@ -31,11 +35,11 @@ public class PDFConverter {
 
             System.out.println("First page converted to image: " + outputPath);
         } catch (IOException e) {
-            System.err.println("Failed to convert PDF to image: " + e.getMessage());
+            throw new Exception("Failed to convert PDF to image: " + e.getMessage());
         }
     }
 
-    public static void ToHTML(PDDocument document, String outputPath) {
+    public static void ToHTML(PDDocument document, String outputPath) throws Exception {
         try (Writer writer = new FileWriter(outputPath)) {
             PDFTextStripper stripper = new PDFTextStripper();
             stripper.setStartPage(1); // Set to first page
@@ -49,11 +53,11 @@ public class PDFConverter {
 
             System.out.println("First page converted to HTML: " + outputPath);
         } catch (IOException e) {
-            System.err.println("Failed to convert PDF to HTML: " + e.getMessage());
+            throw new Exception("Failed to convert PDF to HTML: " + e.getMessage());
         }
     }
 
-    public static void ToText(PDDocument document, String outputPath) {
+    public static void ToText(PDDocument document, String outputPath) throws Exception {
         try (Writer writer = new FileWriter(outputPath)) {
             PDFTextStripper stripper = new PDFTextStripper();
             stripper.setStartPage(1); // Set to first page
@@ -64,11 +68,11 @@ public class PDFConverter {
 
             System.out.println("First page converted to Text: " + outputPath);
         } catch (IOException e) {
-            System.err.println("Failed to convert PDF to Text: " + e.getMessage());
+            throw new Exception("Failed to convert PDF to text: " + e.getMessage());
         }
     }
 
-    public static PDDocument loadLocalPDF(String filePath) {
+    public static PDDocument loadLocalPDF(String filePath) throws Exception {
         try {
             File file = new File(filePath);
             if (!file.exists()) {
@@ -77,8 +81,7 @@ public class PDFConverter {
             }
             return PDDocument.load(file);
         } catch (IOException e) {
-            System.err.println("Failed to load local PDF: " + e.getMessage());
-            return null;
+            throw new Exception("Failed to load PDF from file: " + e.getMessage());
         }
     }
 }
